--- a/style.css
+++ b/style.css
@@ -100,6 +100,10 @@ body {
   outline: none;
 }
 
+.field input[type="range"] {
+  width: 120px;
+}
+
 .btn {
   border: var(--border-thin);
   background: var(--color-teal);
